# AlexaDeviceManager

./: .gitignore  LICENSE  NOTES.md  Package.swift  README.md  pyproject.toml  requirements.txt  run.py  run.sh
.github/workflows/: ci.yml
Sources/AlexaDeviceManager/App/: AlexaDeviceManagerApp.swift
Sources/AlexaDeviceManager/Models/: AlexaDisplayCategory.swift  ApplianceID.swift  Device.swift  DeviceDragPayload.swift  DeviceFilter.swift  DeviceGroup.swift  DeviceSortComparator.swift  HomeAssistantDomain.swift
Sources/AlexaDeviceManager/Networking/: AlexaRegion.swift  AlexaWebSession.swift
Sources/AlexaDeviceManager/Storage/: IntegrationStore.swift
Tests/AlexaDeviceManagerTests/: IntrospectionExportTests.swift
Xcode/: Info.plist  project.yml
app/: _version.py  api_parsers.py  batch_bar.py  device_list_view.py  icons.py  login_dialog.py  main.py  main_window.py  session.py  sidebar.py  store.py  view_model.py
app/models/: appliance_id.py  device.py  device_group.py  filter.py  lookup_tables.py  region.py
resources/: alexa_device_manager.icns
scripts/: alexa-device-manager.rb  build_linux.sh  build_linux_deb.sh  build_macos.sh  build_windows.sh  build_windows_installer.iss  deploy.sh
scripts/git-hooks/: post-commit
tests/: conftest.py  test_api_parsers.py  test_async_fetch.py  test_backups.py  test_batch_bar.py  test_device_list_view.py  test_login_dialog.py  test_main_window.py  test_models.py  test_session_network.py  test_session_utils.py  test_sidebar.py  test_store.py  test_view_model.py
tests/fixtures/: device_endpoint.json
(+7 files in other folders)
