[project]
name = "alexa-device-manager"
version = "2.0.0"
description = "Cross-platform desktop app for managing Amazon Alexa smart home devices"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.6",
    "qasync>=0.27",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
