[project]
name = "alexa-device-manager"
version = "2.0.0"
description = "Cross-platform desktop app for managing Amazon Alexa smart home devices"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.6",
    "qasync>=0.27",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["venv", "build_venv", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401", "F811", "F841"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(^|/)(venv|build_venv|dist)/"

[tool.setuptools.packages.find]
include = ["app*"]
